--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    /* For hsl(255 115 179 / <alpha-value>) */
+    --clr-nav: 0deg 0% 100%;
+  }
+}
