--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@
     --clr-nav: 0deg 0% 100%;
   }
 }
+@layer components {
+  .mainbutton-shadow:hover {
+    box-shadow: 0px 0px 0px 3rem rgba(151, 151, 151, 0.5);
+  }
+}
